# meilisearch-rest-cli

./: README.md  pyproject.toml
src/meilisearch_rest_cli/: __init__.py  cli.py
