[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meilisearch-rest-cli"
version = "0.1.0"
description = "Full-coverage CLI for the Meilisearch REST API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Shivam Rastogi" },
]
keywords = ["cli", "openapi", "rest", "api", "generated"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "openapi-cli-gen>=0.0.19",
]

[project.urls]
Homepage = "https://github.com/shivaam/openapi-cli-gen"
Source = "https://github.com/shivaam/openapi-cli-gen/tree/main/wrappers/meilisearch-rest-cli"
Issues = "https://github.com/shivaam/openapi-cli-gen/issues"
Generator = "https://github.com/shivaam/openapi-cli-gen"

[project.scripts]
meilisearch-rest-cli = "meilisearch_rest_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meilisearch_rest_cli"]
